--- a/pod-definition.yml
+++ b/pod-definition.yml
@@ -5,6 +5,7 @@ metadata:
     labels:
         app: myapp
         type: front-end
+        tier: front-end
 spec:
     containers:
         - name: nginx-container
