Adds deployment.yaml

--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
-kind: ReplicaSet
+kind: Deployment
 metadata:
-  name: myapp-rc
+  name: myapp-deployment
   labels:
     app: myapp
     type: front-end
     tier: front-end
 spec:
-  replicas: 6
+  replicas: 3
   selector:
     matchLabels:
-      tier: front-end
+      type: front-end
   template:
     metadata:
       name: myapp-pod
