--- a/deployment/deployment-definition.yaml
+++ b/deployment/deployment-definition.yaml
@@ -7,7 +7,7 @@ metadata:
     type: front-end
     tier: front-end
 spec:
-  replicas: 3
+  replicas: 3  # might differ from replicaset definition
   selector:
     matchLabels:
       type: front-end
