--- a/replicasets/replicaset-definition.yaml
+++ b/replicasets/replicaset-definition.yaml
@@ -7,7 +7,7 @@ metadata:
     type: front-end
     tier: front-end
 spec:
-  replicas: 6
+  replicas: 6  # might differ from existing pods
   selector:
     matchLabels:
       tier: front-end
