--- a/deployment/deployment-definition.yaml
+++ b/deployment/deployment-definition.yaml
@@ -5,7 +5,6 @@ metadata:
   labels:
     app: myapp
     type: front-end
-    tier: front-end
 spec:
   replicas: 3  # might differ from replicaset definition
   selector:
@@ -17,8 +16,7 @@ spec:
       labels:
         app: myapp
         type: front-end
-        tier: front-end
     spec:
       containers:
         - name: nginx-container
-          image: nginx
+          image: nginx:1.29.0
