--- a/deployment/deployment-definition.yaml
+++ b/deployment/deployment-definition.yaml
@@ -5,12 +5,12 @@ metadata:
   labels:
     app: myapp
     type: front-end
-spec:
+spec:  # creates a ReplicaSet
   replicas: 3  # might differ from replicaset definition
   selector:
     matchLabels:
       type: front-end
-  template:
+  template:  # pod template for ReplicaSet
     metadata:
       name: myapp-pod
       labels:
